--- a/templates/purchasing/storeList.html
+++ b/templates/purchasing/storeList.html
@@ -8,71 +8,79 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Wining</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-      defer
-    ></script>
-    <script
-      type="module"
-      src="https://unpkg.com/vue@3/dist/vue.global.js"
-    ></script>
-    <script type="module" src="/static/js/storeListScript.js" defer></script>
-  </head>
-  <body>
-    <div class="row"></div>
-    <div id="storeList">
-      <div class="row">
-        <div class="col">상품명</div>
-        <div class="col">가격</div>
-        <div class="col">점포명</div>
-        <div class="col">점포 위치</div>
-      </div>
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<title>Wining</title>
+	<meta name="description" content="" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link
+	  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+	  rel="stylesheet"
+	  integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+	  crossorigin="anonymous"
+	/>
+	<script
+	  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+	  integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+	  crossorigin="anonymous"
+	  defer
+	></script>
+	<script
+	  type="module"
+	  src="https://unpkg.com/vue@3/dist/vue.global.js"
+	></script>
+	<script type="module" src="/static/js/storeListScript.js" defer></script>
+</head>
 
-    </div>
-    <div id="newList">
-      <div v-for="data, index in responseData" :key="data.sell_id">
-        <div class="row" @click="move([[data.sell_id]])" :id="[[data.sell_id]]">
-          <div class="col">
-            <input type="hidden" name="sellId" :value="[[data.sell_id]]" />
-            <p>[[data.wine_name]]</p>
-          </div>
-          <div class="col">
-            <p>[[data.sell_price]]</p>
-          </div>
-          <div class="col">
-            <p>[[data.store_name]]</p>
-          </div>
-          <div class="col">
-            <p>[[data.store_address]]</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="scrollArea" style="height: 20vh">
-      <div class="col" style="text-align: center">
-        <input
-          type="button"
-          id="btnBack"
-          value="뒤로가기"
-          onclick="history.back()"
-        />
-      </div>
-    </div>
-  </body>
+<body>
+<div class="row"></div>
+<div id="storeList">
+	{%if store_list%}
+	<div class="row">
+		<div class="col">상품명</div>
+		<div class="col">가격</div>
+		<div class="col">점포명</div>
+		<div class="col">점포 위치</div>
+	</div>
+</div>
+
+<div id="newList">
+	
+	<div v-for="data, index in responseData" :key="data.sell_id">
+		<div class="row" @click="move([[data.sell_id]])" :id="[[data.sell_id]]">
+			<div class="col">
+				<input type="hidden" name="sellId" :value="[[data.sell_id]]" />
+				<p>[[data.wine_name]]</p>
+			</div>
+			<div class="col">
+				<p>[[data.sell_price]]</p>
+			</div>
+			<div class="col">
+				<p>[[data.store_name]]</p>
+			</div>
+			<div class="col">
+				<p>[[data.store_address]]</p>
+			</div>
+		</div>
+	</div>
+	{%else%}
+		<br><br>
+		<p style="text-align: center">판매 매장이 없습니다</p>
+		<br>
+	{%endif%}
+</div>
+
+<div id="scrollArea" style="height: 20vh">
+	<div class="col" style="text-align: center">
+		<input type="button"
+		id="btnBack"
+		value="뒤로가기"
+		onclick="history.back()"
+		/>
+	</div>
+</div>
+</body>
 </html>
 
 
